Fix line height on mobile screens for h2 components

--- a/pages/style.css
+++ b/pages/style.css
@@ -177,6 +177,7 @@ h6,
 @media screen and (max-width: 500px) {
   h2 {
     font-size: 32px;
+    line-height: 40px;
   }
   .body1 {
     font-size: 12px;
